--- a/React+Ts/package.json
+++ b/React+Ts/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "daisyui": "^5.3.8",
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
