--- a/Express+Ts/package.json
+++ b/Express+Ts/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc --noEmit && tsx watch src/server.ts | pino-pretty"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,10 @@
     "tsx": "^4.20.6"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.2"
   }
 }
